# chemXtract

./: .env  .env-template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: Beispieldaten_nach_Familie.json  step1.pkl  step2.pkl
output_data/: Eine-Beispielrechnung-fu_CC_88r-Freiberufler-und-Unternehmen.json
src/: main.py  main_tmp_step2.py  model.py  util_functions.py  utils.py  utils_mock_extract_table_data.py
src/agents/: extract_data_agent.py  extract_main_data_agent.py  extract_table_agent.py  extract_table_data_agent.py  ocr_agent.py  table_norming_agent.py
src/agents/prompts/: extract_main_data_prompts.py  extract_table_prompt.py  step2_prompts.py  table_norming_prompts.py
src/docnetagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/handler/: azure_blob_storage_handler.py  azure_ocr_handler.py  cosmos_db_handler.py  ocr_processor_client.py
src/models/: table_norming.py
